# gobj

./: .gitignore  CMakeLists.txt  build.sh  gobj.pc.in  install.sh  readme.md  utils.cmake
apps/: CMakeLists.txt
apps/animals/: CMakeLists.txt  animals.c
apps/farewells/: CMakeLists.txt  farewells.c
apps/greetings/: CMakeLists.txt  greetings.c
apps/modulo/: CMakeLists.txt  modulo_app.c  modulo_base.c  modulo_base.h
docs/: CMakeLists.txt  gobj_object.dot
gobj/: CMakeLists.txt  gobj.c  gobj.h
