cmake_minimum_required(VERSION 3.0)

execute_process(
    COMMAND git describe
    OUTPUT_VARIABLE GOBJ_VERSION_DESCRIBE
    OUTPUT_STRIP_TRAILING_WHITESPACE)

string(REGEX MATCH
    "([0-9]+).([0-9]+).([0-9+])"
    GOBJ_VERSION_CLEAN
    ${GOBJ_VERSION_DESCRIBE}
)

project(
    GOBJ
    LANGUAGES C
    VERSION "${GOBJ_VERSION_CLEAN}")

message("Preparing build for ${CMAKE_PROJECT_NAME} v${GOBJ_VERSION_MAJOR}.${GOB_VERSION_MINOR}.${GOBJ_VERSION_PATCH}")
include(${CMAKE_CURRENT_SOURCE_DIR}/utils.cmake)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

include_directories(gobj)

add_subdirectory(gobj)
add_subdirectory(apps)
add_subdirectory(docs)

include(InstallRequiredSystemLibraries)
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
set(CPACK_PACKAGE_VERSION_MAJOR "${GOBJ_VERSION_MAJOR}")
set(CPACK_PACKAGE_VERSION_MINOR "${GOBJ_VERSION_MINOR}")
set(CPACK_PACKAGE_VERSION_PATCH "${GOBJ_VERSION_PATCH}")
include(CPack)
